dfir_rs/tests/snapshots/surface_unique__unique_static_push@graphvis_mermaid.snap
---
source: dfir_rs/tests/surface_unique.rs
expression: df.meta_graph().unwrap().to_mermaid(cfg)
---
%%{init:{'theme':'base','themeVariables':{'clusterBkg':'#ddd','clusterBorder':'#888'}}}%%
flowchart TD
classDef pullClass fill:#8af,stroke:#000,text-align:left,white-space:pre
classDef pushClass fill:#ff8,stroke:#000,text-align:left,white-space:pre
classDef otherClass fill:#fdc,stroke:#000,text-align:left,white-space:pre
linkStyle default stroke:#aaa
1v1[\"(1v1) <code>source_iter(0..10)</code>"/]:::pullClass
2v1[\"(2v1) <code>persist::&lt;'static&gt;()</code>"/]:::pullClass
3v1[\"(3v1) <code>source_iter(5..15)</code>"/]:::pullClass
4v1[\"(4v1) <code>persist::&lt;'static&gt;()</code>"/]:::pullClass
5v1[\"(5v1) <code>union()</code>"/]:::pullClass
6v1[/"(6v1) <code>tee()</code>"\]:::pushClass
7v1[/"(7v1) <code>unique::&lt;'static&gt;()</code>"\]:::pushClass
8v1[/"(8v1) <code>for_each(|v| out_send.send(v).unwrap())</code>"\]:::pushClass
9v1[/"(9v1) <code>for_each(std::mem::drop)</code>"\]:::pushClass
2v1-->5v1
1v1-->2v1
4v1-->5v1
3v1-->4v1
5v1-->6v1
7v1-->8v1
6v1-->7v1
6v1-->9v1
subgraph sg_1v1 ["sg_1v1"]
    3v1
    4v1
    1v1
    2v1
    7v1
    8v1
    9v1
    subgraph sg_1v1_var_pivot ["var <tt>pivot</tt>"]
        5v1
        6v1
    end
end
